Fix resource/day